# apps/shop-admin-api/src/modules/products/entities/image-upload-url.entity.ts
@@ -1,0 +1,9 @@
+import { ApiProperty } from '@nestjs/swagger';
+
+export class ImageUploadUrl {
+  @ApiProperty()
+  uploadUrl!: string;
+
+  @ApiProperty()
+  key!: string;
+}
