# apps/storefront-api/src/modules/products/entities/product-image.entity.ts
@@ -1,0 +1,12 @@
+import { ApiProperty } from '@nestjs/swagger';
+
+export class ProductImage {
+  @ApiProperty({ type: Number })
+  id!: number;
+
+  @ApiProperty()
+  url!: string;
+
+  @ApiProperty({ type: Number })
+  position!: number;
+}
